--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,251 @@
-<h1>
-  {{title}}
-</h1>
+<div id="index-banner">
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <img class="left-align" src="assets/images/governance-logo.png" style="width: 350px">
+        </div>
+        <div class="col s12 m6">
+          <h5 class="header right-align no-pad-top">Open Hearts<br>Open Community<br>Open Governance</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="overview" class="section scrollspy">
+    <p>Our beloved community deserves a governance stucture that allows our community to grow, experiment, and flourish.</p>
+    <p>After years of transition, we believe the time is right to address long standing governing issues and establish a strong foundation for our community's continued growth.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div id="purpose" class="section scrollspy">
+    <div class="row no-mar-bot">
+      <div class="col s12">
+        <h4>Purpose of this document</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <p>In order to faciliate a productive governance conversation that everyone can particpate in, we've begun to collect all relevalant history of the community and convene a place where anyone can contribute to the conversation or ask questions.</p>
+        <p>Most answers are shared as editable Google Docs. Below each document is a link to editable document. Changes to documents will be reflected on this site within 5 minutes. The source code of this website is freely available on github.com.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Governance FAQ</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1eup3LrdCc5FzUWCEK4bpqpF_uH6mPvtV_NljcLEzJQE/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1eup3LrdCc5FzUWCEK4bpqpF_uH6mPvtV_NljcLEzJQE/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          Status and history on major governance questions.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Governance Community Questions</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1qp9_sg4YPasvu_UV0zzVpHAGBYNry0c4ETrNRfy4L8I/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1qp9_sg4YPasvu_UV0zzVpHAGBYNry0c4ETrNRfy4L8I/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          Questions about governance and history raised by members of the community.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Current Management</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1o0afhfMtsovWsjhEzXmmebWtHSnKoinYciPmGn1F1dA/pub?embedded=true" height="500px"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1o0afhfMtsovWsjhEzXmmebWtHSnKoinYciPmGn1F1dA/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          The current board officers and other members.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
+  <div id="corp-docs" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Corporate Documents</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+       <div class="collection">
+          <a href="assets/files/ThousandNetworkConstitutionV6-1.pdf" class="collection-item" target="_blank">Thousand Network Constitution (draft) [PDF]</a>
+          <a href="assets/files/tn-certificate-of-incorporation.pdf" class="collection-item" target="_blank">Thousand Network Certificate of Incorporation [pdf]</a>
+          <a href="assets/files/tn-name-change-application.pdf" class="collection-item" target="_blank">Thousand Network Application for Change of Name</a>
+          <a href="assets/files/20161117-Sale-and-purchase-Agreement-Sandbox-AG-Thousand-Network.pdf" class="collection-item" target="_blank">Sandbox Sale and Purchase Agreement [pdf]</a>
+          <a href="https://www.facebook.com/groups/537175006411957/permalink/1119618654834253/" class="collection-item" target="_blank">Thousand Network VAT Discussion [fb]</a>
+          <a href="https://docs.google.com/spreadsheets/d/1ClLrQ_kFwh0Fl2n4VO9pLKCw9m4dLY4VEZDXTpKxRY0/edit#gid=0" class="collection-item" target="_blank">Corporate Entity Options [google]</a>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          These documents cover official legal entities, legal governance, and legal agreement documents.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="corp-docs" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Corporate Discussions</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+       <div class="collection">
+          <a href="https://www.facebook.com/groups/537175006411957/permalink/1119618654834253/" class="collection-item" target="_blank">Thousand Network VAT Discussion [fb]</a>
+          <a href="https://docs.google.com/spreadsheets/d/1ClLrQ_kFwh0Fl2n4VO9pLKCw9m4dLY4VEZDXTpKxRY0/edit#gid=0" class="collection-item" target="_blank">Corporate Entity Options [google]</a>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          These are records of discussions and brainstorming over corporate and legal issues.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Community History</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/11LecaXC2OR51Jv3-NeViRx0VhhvHnumYZ0i9nbsxdBc/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/11LecaXC2OR51Jv3-NeViRx0VhhvHnumYZ0i9nbsxdBc/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          Collaboratively written account of the initial founding of Sandbox, the restart of the community, and growth up until now.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Community Vision and Objectives</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1dBB8_iRTKr6qfTNS951wF4nfTA1R1pg39Kpmf599gvA/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1dBB8_iRTKr6qfTNS951wF4nfTA1R1pg39Kpmf599gvA/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          Collaboratively written account of the initial founding of Sandbox, the restart of the community, and growth up until now.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
+        <h4>Additional Notes</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m8">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1f7nh5LCXykvFLZiRPchZ-GF54zSF3RW3fbNlb0oFTMc/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1f7nh5LCXykvFLZiRPchZ-GF54zSF3RW3fbNlb0oFTMc/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <p class="caption">
+          Open space for additional thoughts.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
