--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col s12">
         <p>In order to faciliate a productive governance conversation that everyone can particpate in, we've begun to collect all relevalant history of the community and convene a place where anyone can contribute to the conversation or ask questions.</p>
-        <p>Most answers are shared as editable Google Docs. Below each document is a link to editable document. Changes to documents will be reflected on this site within 5 minutes. The source code of this website is freely available on github.com.</p>
+        <p>Most answers are shared as editable Google Docs. Below each document is a link to editable document. Changes to documents will be reflected on this site within 5 minutes. The source code of this website is freely available on <a href="https://github.com/sandboxis/governance" taget="_blank">github.com</a> and hosted on GitHub Pages.</p>
       </div>
     </div>
   </div>
