-fix link to faq - fix sizing on notes section - add community faq guide

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,7 +118,6 @@
   </div>
 </div>
 
-
 <div class="container">
   <div id="corp-docs" class="section scrollspy">
     <div class="row">
@@ -227,11 +226,38 @@
   <div id="notes" class="section scrollspy">
     <div class="row">
       <div class="col s12">
+        <h4>Community FAQ</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m9">
+        <div class="card large">
+          <div class="card-image">
+            <iframe src="https://docs.google.com/document/d/1kWb6962ouVWzmhNajrAfaLCz1y7mNTJdYouZ2lEaG_k/pub?embedded=true"></iframe>
+          </div>
+          <div class="card-action">
+            <a class="blue-text" href="https://docs.google.com/document/d/1kWb6962ouVWzmhNajrAfaLCz1y7mNTJdYouZ2lEaG_k/edit">Edit this document</a>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <p class="caption">
+          Community document describing vision, values, and structure of the community.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div id="notes" class="section scrollspy">
+    <div class="row">
+      <div class="col s12">
         <h4>Additional Notes</h4>
       </div>
     </div>
     <div class="row">
-      <div class="col s12 m8">
+      <div class="col s12 m9">
         <div class="card large">
           <div class="card-image">
             <iframe src="https://docs.google.com/document/d/1f7nh5LCXykvFLZiRPchZ-GF54zSF3RW3fbNlb0oFTMc/pub?embedded=true"></iframe>
@@ -241,7 +267,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m4">
+      <div class="col s12 m3">
         <p class="caption">
           Open space for additional thoughts.
         </p>
