- add resource section to site

--- a/src/app/section/overview/overview.component.html
+++ b/src/app/section/overview/overview.component.html
@@ -2,6 +2,8 @@
   <p class="no-mar-bot no-mar-top">In order to faciliate a productive governance conversation that everyone can particpate in, we've begun to collect all relevalant history of the community and convene a place where anyone can contribute to the conversation or ask questions.</p>
 </div>
 
+<img src="assets/images/welcome.jpg" style="width: 100%">
+
 <div id="purpose" class="section scrollspy no-pad-top">
   <p>Most answers are shared as editable Google Docs. Below each document is a link to editable document. Changes to documents will be reflected on this site within 5 minutes. The source code of this website is freely available on <a href="https://github.com/sandboxis/governance" taget="_blank">github.com</a> and hosted on GitHub Pages.</p>
 </div>
