--- a/src/app/section/proposal/proposal.component.html
+++ b/src/app/section/proposal/proposal.component.html
@@ -1,7 +1,15 @@
 <h2 class="title">Community Jam</h2>
 
+<div id="overview" class="section scrollspy no-pad-top">
+  <p class="no-mar-bot no-mar-top">Our community is in need of brilliant ideas for our future. With the current leadership stepping down, members new and old are have created this space for an open discussion on our future. In the spirit of peer inclusion and radical transparency, invite everyone to join in.</p>
+</div>
+
+<div id="purpose" class="section scrollspy no-pad-top">
+  <p>Please join the conversation in the Slack channel #transpency or start editing and commenting on Google Docs!</p>
+</div>
+
 <div id="notes" class="section scrollspy">
-  <h4>Transition Proposals</h4>
+  <h4>Our community's future</h4>
 </div>
 <div class="row">
   <div class="col s12 m9">
@@ -17,6 +25,27 @@
   <div class="col s12 m3">
     <p class="caption">
       Community generated ideas for next phase of Sandbox
+    </p>
+  </div>
+</div>
+
+<div id="corp-docs" class="section scrollspy first-section">
+  <h4>Related Documents</h4>
+</div>
+<div class="row">
+  <div class="col s12 m9">
+   <div class="collection">
+      <a href="https://docs.google.com/document/d/1OAPqRN1Dmyvb9mAdl5WvG5sCZLvtFGcLxO5ERX9tfS0/edit" class="collection-item" target="_blank">Transition Proposal (2014-10) [google]</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd74u-DfE7d7VHpt9a1WB4WAkCfy2L21xjqzBH_ud4-ozpEgw/viewform?c=0&w=1" class="collection-item" target="_blank">Trustee and Community Manager Application Form (2015) [google]</a>
+      <a href="https://docs.google.com/document/d/15le3EKzNBw6GfribFImHrwxQILuTGTQbswoizvHUj5w/edit" class="collection-item" target="_blank">By-laws Draft (2014-12) [google]</a>
+      <a href="https://docs.google.com/document/d/1gMY4EPg4ItvkRRzoeEhM-tQsmXhEItCwan1LLyPo2CA/edit" class="collection-item" target="_blank">By-laws Brief / Task List (2015-02) [google]</a>
+      <a href="https://docs.google.com/document/d/1haO6L3-3WJEI2CU_fYYd7WdUarhI7euCtbkufDN4xNU/edit" class="collection-item" target="_blank">By-laws Draft (2015-05) [google]</a>
+      <a href="https://docs.google.com/document/d/1L5ibkf7bIGE8oesp5PBajtvF55crEsipXeBg1foDfV0/edit" class="collection-item" target="_blank">By-laws Announcement (2015-05) [google]</a>
+    </div>
+  </div>
+  <div class="col s12 m3">
+    <p class="caption">
+      These documents cover related previous transition work.
     </p>
   </div>
 </div>
