--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,6 +3,7 @@
   <li><a routerLink="/governance" routerLinkActive="active">Governance</a></li>
   <li><a routerLink="/legal" routerLinkActive="active">Legal</a></li>
   <li><a routerLink="/community" routerLinkActive="active">Community</a></li>
+  <li><a routerLink="/resources" routerLinkActive="active">Resources</a></li>
   <li><a routerLink="/transition-2017" routerLinkActive="active">Transition (2017)</a>
   <li><a routerLink="/transition-2014" routerLinkActive="active">Transition (2014)</a>
   <li><a routerLink="/proposal" routerLinkActive="active">Community Jam</a></li>
