--- a/src/app/section/transition/transition-2014/transition-2014.component.html
+++ b/src/app/section/transition/transition-2014/transition-2014.component.html
@@ -1,85 +1,24 @@
 <h2 class="title">Transition (2014)</h2>
 
-<div id="notes" class="section scrollspy">
-  <h4>Governance FAQ</h4>
+<div id="corp-docs" class="section scrollspy first-section">
+  <h4>Related Documents</h4>
 </div>
 <div class="row">
   <div class="col s12 m9">
-    <div class="card large">
-      <div class="card-image">
-        <iframe src="https://docs.google.com/document/d/1eup3LrdCc5FzUWCEK4bpqpF_uH6mPvtV_NljcLEzJQE/pub?embedded=true"></iframe>
-      </div>
-      <div class="card-action">
-        <a class="blue-text" href="https://docs.google.com/document/d/1eup3LrdCc5FzUWCEK4bpqpF_uH6mPvtV_NljcLEzJQE/edit">Edit this document</a>
-      </div>
+   <div class="collection">
+      <a href="https://docs.google.com/document/d/1OAPqRN1Dmyvb9mAdl5WvG5sCZLvtFGcLxO5ERX9tfS0/edit" class="collection-item" target="_blank">Transition Proposal (2014-10) [google]</a>
+      <a href="https://docs.google.com/document/d/15le3EKzNBw6GfribFImHrwxQILuTGTQbswoizvHUj5w/edit" class="collection-item" target="_blank">By-laws Draft (2014-12) [google]</a>
+      <a href="https://docs.google.com/document/d/1gMY4EPg4ItvkRRzoeEhM-tQsmXhEItCwan1LLyPo2CA/edit" class="collection-item" target="_blank">By-laws Brief / Task List (2015-02) [google]</a>
+      <a href="https://docs.google.com/document/d/1haO6L3-3WJEI2CU_fYYd7WdUarhI7euCtbkufDN4xNU/edit" class="collection-item" target="_blank">By-laws Draft (2015-05) [google]</a>
+      <a href="https://docs.google.com/document/d/1L5ibkf7bIGE8oesp5PBajtvF55crEsipXeBg1foDfV0/edit" class="collection-item" target="_blank">By-laws Announcement (2015-05) [google]</a>
+      <a href="https://docs.google.com/document/d/1XE9b6D1mZ5jpAgQfCS5fJRNgVJmYV29lvXE__DDnAL4/view" class="collection-item" target="_blank">Trustee Job Descriptions [google]</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSd74u-DfE7d7VHpt9a1WB4WAkCfy2L21xjqzBH_ud4-ozpEgw/viewform?c=0&w=1" class="collection-item" target="_blank">Trustee and Community Manager Application Form (2015) [google]</a>
+      <a href="https://docs.google.com/presentation/d/1QZjLIiAU0hO9iTk-Vk7H4CdodWo9ajRcqC_CpZqPsUw/view" class="collection-item" target="_blank">Trustee Candidate Statements [google]</a>
     </div>
   </div>
   <div class="col s12 m3">
     <p class="caption">
-      Status and history on major governance questions.
-    </p>
-  </div>
-</div>
-
-<div id="notes" class="section scrollspy">
-  <h4>Governance Community Questions</h4>
-</div>
-<div class="row">
-  <div class="col s12 m9">
-    <div class="card large">
-      <div class="card-image">
-        <iframe src="https://docs.google.com/document/d/1qp9_sg4YPasvu_UV0zzVpHAGBYNry0c4ETrNRfy4L8I/pub?embedded=true"></iframe>
-      </div>
-      <div class="card-action">
-        <a class="blue-text" href="https://docs.google.com/document/d/1qp9_sg4YPasvu_UV0zzVpHAGBYNry0c4ETrNRfy4L8I/edit">Edit this document</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s12 m3">
-    <p class="caption">
-      Questions about governance and history raised by members of the community.
-    </p>
-  </div>
-</div>
-
-<div id="notes" class="section scrollspy">
-  <h4>Current Management</h4>
-</div>
-<div class="row">
-  <div class="col s12 m9">
-    <div class="card large">
-      <div class="card-image">
-        <iframe src="https://docs.google.com/document/d/1o0afhfMtsovWsjhEzXmmebWtHSnKoinYciPmGn1F1dA/pub?embedded=true" height="500px"></iframe>
-      </div>
-      <div class="card-action">
-        <a class="blue-text" href="https://docs.google.com/document/d/1o0afhfMtsovWsjhEzXmmebWtHSnKoinYciPmGn1F1dA/edit">Edit this document</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s12 m3">
-    <p class="caption">
-      The current board officers and other members.
-    </p>
-  </div>
-</div>
-
-<div id="notes" class="section scrollspy">
-  <h4>Additional Notes</h4>
-</div>
-<div class="row">
-  <div class="col s12 m9">
-    <div class="card large">
-      <div class="card-image">
-        <iframe src="https://docs.google.com/document/d/1f7nh5LCXykvFLZiRPchZ-GF54zSF3RW3fbNlb0oFTMc/pub?embedded=true"></iframe>
-      </div>
-      <div class="card-action">
-        <a class="blue-text" href="https://docs.google.com/document/d/1f7nh5LCXykvFLZiRPchZ-GF54zSF3RW3fbNlb0oFTMc/edit">Edit this document</a>
-      </div>
-    </div>
-  </div>
-  <div class="col s12 m3">
-    <p class="caption">
-      Open space for additional thoughts.
+      These documents cover related previous transition work.
     </p>
   </div>
 </div>
